--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,28 @@
 .container {
     width: 1200px;
     margin: 0 auto;
-
 }
 
 .row {
     display: flex;
     justify-content: space-between;
+    margin-top: 50px;
+}
+
+.btn {
+    background-color: rgb(80, 80, 255);
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+}
+
+.btn:hover {
+    cursor: pointer;
+}
+
+.btn:active {
+    background-color: rgb(212, 188, 1);
 }
