--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,16 @@
 .container {
     width: 1200px;
-    margin: 0 auto;
+    margin: 200px auto;
     border: 1px solid rgb(235, 232, 232);
     border-radius: 10px;
     padding: 20px;
 }
 
 .row {
-    display: flex;
+    margin-top: 50px;
     justify-content: space-between;
     margin-top: 50px;
+    display: flex;
 }
 
 .btn {
@@ -52,4 +53,9 @@
 .header {
     background-color: rgb(235, 232, 232);
     border-radius: 10px;
+}
+
+h3 {
+    padding-left: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
